Cyberduck
https://cyberduck.io/

7.4.1
- [Localize] Croatian Localization
- [Bugfix] Failure opening Terminal.app (SFTP)

7.4.0
- [Feature] Support to access team folders (Dropbox Business)
- [Feature] Support for eu-south-1 (Milan) region (S3)
- [Feature] Support for af-south-1 (Cape Town) region (S3)
- [Feature] Support for ap-east-1 (Hong Kong) region (S3)
- [Feature] Support for me-south-1 (Bahrain) region (S3)
- [Feature] Making requests to dual-stack endpoints (IPv6) (S3)
- [Feature] Create new vaults in format 7 by default (Cryptomator) (#11040)
- [Bugfix] Slow updating files after saving changes in external editor (#11004)

7.3.1
- [Feature] Edit ACLs for files (Google Storage) (#11008)
- [Feature] Support to set storage class (Google Storage)
- [Feature] Support for Intelligent-Tiering storage class (S3) (#11031)
- [Feature] Support for Glacier Deep Archive storage class (S3) (#10681)
- [Feature] Allow selection of Glacier storage class as default for uploads (S3) (#10681)
- [Feature] Support for shared files (OneDrive)
- [Feature] Support to access shared files (OneDrive)
- [Bugfix] Missing URLs to copy of CDN distributions (S3, Rackspace)
- [Bugfix] Reduced memory usage (macOS)
- [Bugfix] Failure uploading files to vault in version 7 format (Cryptomator) (#11020)
- [Bugfix] Interoperability with Minio (S3) (#11018)

7.3.0
- [Feature] Support for vault format version 7 (Cryptomator) (#10825)
- [Feature] Labels for bookmarks (macOS) (#9719)
- [Feature] Group bookmarks by labels in menu (macOS)
- [Feature] Support TLS 1.3 (#10962)
- [Bugfix] Download fails for files with whitespace in name (Google Storage) (#10931)
- [Bugfix] Unable to access documents in Shared with me (Google Drive)
- [Bugfix] Read timeout after copying large file (OpenStack Swift)
- [Bugfix] Repeated prompt for authorization code (hubiC)
- [Bugfix] Immediate retry for failure with cached upload channel (Backblaze B2)
- [Bugfix] Set timestamp with X-OC-Mtime header (Nextcloud, ownCloud)