@@ -46,7 +46,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
     </style>
 </head>
 
@@ -63,6 +62,15 @@
 </p>
 <ul>
     <li><span class="label label-success">Localize</span> Croatian Localization</li>
+    <li><span class="label label-warning">Bugfix</span> Unable to use S3 HTTP connection profile (S3) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11061">#11061</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Failure uploading files with exactly 100MB file length (S3) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11038">#11038</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Failure opening Terminal.app when default application for
+        .command files is not properly set (SFTP)
+    </li>
 </ul>
 
 <p>
